# commit-msg-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
commit_msg_ai/: __init__.py  main.py
commitai/: __init__.py  main.py
docs/: _config.yml  index.html
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_sass/custom/: custom.scss
docs/getting-started/: choose-model.md  configuration.md  index.md  install-commitai.md  install-ollama.md  usage.md
