[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitai"
version = "0.1.0"
description = "Generate commit messages from staged changes using a local LLM via Ollama"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Xavi" }]
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
commitai = "commitai.main:main"
