[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitai"
version = "0.1.0"
description = "Generate commit messages from staged changes using a local LLM via Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Xavi Martínez" }]
keywords = ["git", "commit", "llm", "ollama", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://xavimf87.github.io/commitai"
Repository = "https://github.com/xavimf87/commitai"
Issues = "https://github.com/xavimf87/commitai/issues"

[project.scripts]
commitai = "commitai.main:main"
